--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ erl_crash.dump
 # Alternatively, you may comment the line below and commit the
 # secrets files as long as you replace their contents by environment
 # variables.
+deploy/secrets.yml
